<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="2"
            android:gravity="center">

            <Methdes.MyTextView
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/tv_no"
                android:layout_weight="0.8"
                android:gravity="right|center"
                android:textColor="#000"
                android:layout_width="0dp"
                android:text="@string/Order_ID"
                android:padding="5dp"
                android:textSize="20sp" />

            <Methdes.MyTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Clint_Nane"
                android:id="@+id/tv_nm"
                android:gravity="right|center"
                android:textColor="#a31232"
                android:textAlignment="gravity"
                android:layout_weight="1.2"
                android:padding="5dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="2"
            android:gravity="center">

            <Methdes.MyTextView
                android:id="@+id/vDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="right|center"
                android:padding="5dp"
                android:text="TextView"
                android:textColor="#000"
                android:textSize="20sp" />

            <Methdes.MyTextView
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Client_ID"
                android:id="@+id/tv_AccNo"
                android:layout_weight="1.2"
                android:gravity="right|center"
                android:textColor="#000"
                android:layout_width="0dp"
                android:padding="5dp"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>